<resources>
    <string name="app_name">Tiktok Clone</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="explore">Explore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="live">Live</string>
    <string name="following">Following</string>
    <string name="for_you">For You</string>
</resources>