<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.tiktok.view.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_explore"
        android:name="com.example.tiktok.view.fragments.ExploreFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/nav_add"
        android:name="com.example.tiktok.view.fragments.AddPostFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.example.tiktok.view.fragments.ChatFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.tiktok.view.fragments.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" />

</navigation>